@@ -1,0 +1,4 @@
+
+gACT <- function(z,g,w,c,al=.05){
+  generateTest(g,w,c,al)(z)
+}
